Fixed footer email mishap

--- a/contact.html
+++ b/contact.html
@@ -484,7 +484,7 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contact</h3>
-                    <p>Email: student@kent.edu</p>
+                    <p>Email: bsummerl@kent.edu</p>
                     <p>Kent State University</p>
                 </div>
             </div>
