--- a/projects.html
+++ b/projects.html
@@ -325,7 +325,7 @@
                     <img src="images/Obj Rec for HIC Projects.jpg" alt="Computer Vision Object Detection" class="project-img">
                     <div class="project-content">
                         <h3>Computer Vision Object Detection</h3>
-                        <p>Created a real-time object detection system using deep learning to identify and track objects in video streams with high accuracy.</p>
+                        <p>Created a real-time object detection model, using both deep learning and transfer learning methods.  I utilized tensorflow's pretrained models to identify and track objects in video streams with high accuracy.</p>
                         <div class="project-tags">
                             <span class="tag">Python</span>
                             <span class="tag">TensorFlow</span>
@@ -360,7 +360,7 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contact</h3>
-                    <p>Email: example@kent.edu</p>
+                    <p>Email: bsummerl@kent.edu</p>
                     <p>Kent State University</p>
                 </div>
             </div>
