--- a/about.html
+++ b/about.html
@@ -394,7 +394,7 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contact</h3>
-                    <p>Email: example@kent.edu</p>
+                    <p>Email: bsummerl@kent.edu</p>
                     <p>Kent State University</p>
                 </div>
             </div>
