fixed header image, and light and dark mode toggles.  Made edits to the font, and footer message

--- a/about.html
+++ b/about.html
@@ -388,8 +388,8 @@
                 <div class="footer-section">
                     <h3>Connect</h3>
                     <ul>
-                        <li><a href="https://github.com/SummerlinCodes" target="_blank">GitHub</a></li>
-                        <li><a href="https://www.linkedin.com/in/brandon-summerlin-35179a318/?trk=opento_sprofile_goalscard" target="_blank">LinkedIn</a></li>
+                        <li><a href="https://github.com/SummerlinCodes" target="_blank" rel="noopener">GitHub</a></li>
+                        <li><a href="https://www.linkedin.com/in/brandon-summerlin-35179a318/?trk=opento_sprofile_goalscard" target="_blank" rel="noopener">LinkedIn</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -399,7 +399,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p> 2025 My Portfolio - Created for CS 32301 Human Interface Computing</p>
+                <p> 2025 My Portfolio - Brandon Summerlin</p>
             </div>
         </div>
     </footer>
