--- a/projects.html
+++ b/projects.html
@@ -365,7 +365,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p> 2025 My Portfolio - Created for CS 32301 Human Interface Computing</p>
+                <p> 2025 My Portfolio - Brandon Summerlin</p>
             </div>
         </div>
     </footer>
