--- a/projects.html
+++ b/projects.html
@@ -325,13 +325,13 @@
                     <img src="images/Obj Rec for HIC Projects.jpg" alt="Computer Vision Object Detection" class="project-img">
                     <div class="project-content">
                         <h3>Computer Vision Object Detection</h3>
-                        <p>Created a real-time object detection model, using both deep learning and transfer learning methods.  I utilized tensorflow's pretrained models to identify and track objects in video streams with high accuracy.</p>
+                        <p>Created a real-time object detection model, using both deep learning and transfer learning methods.  I utilized tensorflow's pretrained models to identify and track objects in video streams with high accuracy, and adaptability in different lighting.</p>
                         <div class="project-tags">
                             <span class="tag">Python</span>
                             <span class="tag">TensorFlow</span>
                             <span class="tag">Computer Vision</span>
                         </div>
-                        <a href="https://github.com/Item-Quest/TeamBravo/tree/AI-Brandon" class="project-link" target="_blank">View Project</a>
+                        <a href="https://github.com/SummerlinCodes/TeamBravo/tree/main" class="project-link" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
