--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
     <section class="cta">
         <div class="container">
             <h2>Let's Collaborate</h2>
-            <p>I'm currently available for internships and collaborative projects in Data Science, Machine Learning, and Human-Computer Interaction and interface development.</p>
+            <p>I'm currently available for internships and collaborative projects in Data Science, Machine Learning, Software Engineering, and Human-Computer Interaction and interface development.</p>
             <a href="contact.html" class="btn btn-cta">Get In Touch</a>
         </div>
     </section>
