--- a/contact.html
+++ b/contact.html
@@ -404,6 +404,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html" class="active">Contact</a></li>
+                    <li><a href="resume/Updated Resume (for my portfolio).pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
                 </ul>
             </nav>
         </div>
@@ -473,6 +474,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li><a href="resume/Updated Resume (for my portfolio).pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
