--- a/about.html
+++ b/about.html
@@ -339,6 +339,7 @@
                     <li><a href="about.html" class="active">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="resume/Updated Resume (for my portfolio).pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
                 </ul>
             </nav>
         </div>
@@ -366,6 +367,8 @@
                         <li>TensorFlow</li>
                         <li>Computer Vision</li>
                         <li>UI/UX Design</li>
+                        <li>JavaScript</li>
+                        <li>Natural Language Processing</li>
                     </ul>
                 </div>
             </div>
@@ -383,6 +386,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li><a href="resume/Updated Resume (for my portfolio).pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
