--- a/contact.html
+++ b/contact.html
@@ -404,7 +404,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html" class="active">Contact</a></li>
-                    <li><a href="resume/Updated Resume (for my portfolio).pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                    <li><a href="resume/Resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
                 </ul>
             </nav>
         </div>
@@ -474,7 +474,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="resume/Updated Resume (for my portfolio).pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                        <li><a href="resume/Resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
