--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="resume/Updated Resume (for my portfolio).pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                    <li><a href="resume/Resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
                     <li><button class="theme-toggle" id="theme-toggle">🌓</button></li>
                 </ul>
             </nav>
@@ -820,7 +820,7 @@
                         <li><a href="index.html" class="active">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="projects.html">Projects</a></li>
-                        <li><a href="resume/Updated Resume (for my portfolio).pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                        <li><a href="resume/Resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
